force-app/main/default/objects/MTRSVCProductPricing__c/MTRSVCProductPricing__c.object-meta.xml
<CustomObject>
    <label>MTR/SVC Line+Product</label>
    <nameField>
        <displayFormat>MTPP-{000000}</displayFormat>
        <label>MTR/SVC+PROD PRICING ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTR/SVC Line+Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>