force-app/main/default/objects/MTRSVCProductPricing__c/fields/MaterialID__c.field-meta.xml
<CustomField>
    <fullName>MaterialID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MATERIAL ID</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipName>MATERIAL_PRODUCT</relationshipName>
    <type>Lookup</type>
</CustomField>