force-app/main/default/objects/MTRSVCProductPricing__c/fields/MaterialSellingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>MaterialSellingUnitPriceUSDFormu__c</fullName>
    <formula>MaterialID__r.StandardSellingUnitPriceUSD__c</formula>
    <label>MATERIAL SELLING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>