force-app/main/default/objects/MTRSVCProductPricing__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <label>PRODUCT ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PRODUCT__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipLabel>MTR/SVC LINE+PRODUCT</relationshipLabel>
    <relationshipName>MaterialProduct</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>