force-app/main/default/objects/MTRSVCProductPricing__c/fields/SVCBuyingUnitPriceLocalForumu__c.field-meta.xml
<CustomField>
    <fullName>SVCBuyingUnitPriceLocalForumu__c</fullName>
    <formula>ServiceID__r.BuyingUnitPriceLocal__c</formula>
    <label>SVC BUYING UNIT PRICE(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>