force-app/main/default/objects/MTRSVCProductPricing__c/fields/SVCBuyingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>SVCBuyingUnitPriceUSD__c</fullName>
    <label>SVC BUYING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>