force-app/main/default/objects/MTRSVCProductPricing__c/fields/SVCBuyingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>SVCBuyingUnitPriceUSDFormu__c</fullName>
    <formula>ServiceID__r.BuyingUnitPriceUSD__c</formula>
    <label>SVC BUYING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>