force-app/main/default/objects/MTRSVCProductPricing__c/fields/SVCSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>SVCSellingUnitPriceUSD__c</fullName>
    <label>SVC SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>