force-app/main/default/objects/MTRSVCProductPricing__c/fields/SVCSellingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>SVCSellingUnitPriceUSDFormu__c</fullName>
    <formula>ServiceID__r.StandardSellingUnitPriceUSD__c</formula>
    <label>SVC SELLING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>